feat: 添加容器化部署支持和CI/CD自动化
1. 容器化支持：
- 添加多阶段Dockerfile构建配置
- 集成必要的运行时依赖（kubectl/jq/python）
- 优化镜像大小和构建效率

2. 自动化部署：
- 配置GitHub Actions自动构建流程
- 集成DockerHub镜像仓库
- 支持AMD64和ARM64双架构

3. Kubernetes部署：
- 添加完整的K8s部署清单
- 配置RBAC权限和服务发现
- 增加健康检查和资源限制

4. 文档更新：
- 添加容器化部署指南
- 完善配置说明文档
- 补充CI/CD使用说明

影响: 支持容器化部署和自动化构建，简化部署流程，提高可维护性。

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,7 +27,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GH_TOKEN }}
       - name: Build Docker image
         run: |
           version=$(git describe --tags --abbrev)
