--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,32 +1,32 @@
-name: Release
-
+name: Release wechat-webhook binary
 on:
   push:
     tags:
-      - "v*.*.*"
-
-env:
-  REGISTRY: ghcr.io
+      - 'v*'
+      - 'draft-*'
 
 jobs:
-  build-push-image:
+  publishGitRelease:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
-          fetch-depth: 0
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Log in to the Container registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GH_TOKEN }}
-      - name: Build Docker image
+          go-version: '^1.17'
+          check-latest: true
+
+      - name: Cross compile
         run: |
-          docker build -t ${{ env.REGISTRY }}/${{ github.repository_owner }}/kube-copilot:${{ github.ref_name }} .
-          docker push ${{ env.REGISTRY }}/${{ github.repository_owner }}/kube-copilot:${{ github.ref_name }}
+          sudo apt-get install rhash -y
+          go install github.com/mitchellh/gox@v1.0.1
+          mkdir -p build
+          ./scripts/xcompile.sh
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files:  build/*
+          draft: true
+          fail_on_unmatched_files: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.LGITHUB_TOKEN  }}
