--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: Release wechat-webhook binary
+name: Release kube-copilot binary
 on:
   push:
     tags:
@@ -10,23 +10,60 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
         with:
-          go-version: '^1.17'
-          check-latest: true
+          fetch-depth: 0
 
-      - name: Cross compile
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          check-latest: true
+          go-version: '1.24'
+          cache: true
+          cache-dependency-path: |
+            **/go.sum
+            **/go.mod
+
+      - name: Install build dependencies
         run: |
-          sudo apt-get install rhash -y
-          go install github.com/mitchellh/gox@v1.0.1
+          sudo apt-get update
+          sudo apt-get install -y rhash
+
+      - name: Install gox
+        run: go install github.com/mitchellh/gox@v1.0.1
+
+      - name: Set version
+        id: version
+        run: |
+          echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+          echo "VERSION=${VERSION#v}" >> $GITHUB_ENV
+
+      - name: Build
+        run: |
           mkdir -p build
           ./scripts/xcompile.sh
+          # 验证构建结果
+          for binary in build/*; do
+            if [ -f "$binary" ]; then
+              echo "Verifying $binary..."
+              chmod +x "$binary"
+              "$binary" version
+            fi
+          done
+
+      - name: Create checksums
+        run: |
+          cd build
+          rhash --sha256 --sha512 --md5 * > checksums.txt
 
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files:  build/*
-          draft: true
+          files: |
+            build/*
+            build/checksums.txt
+          draft: ${{ startsWith(github.ref, 'refs/tags/draft-') }}
           fail_on_unmatched_files: true
+          generate_release_notes: true
+          name: ${{ github.ref_name }}
         env:
-          GITHUB_TOKEN: ${{ secrets.LGITHUB_TOKEN  }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
