--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,6 +37,21 @@ jobs:
           echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
           echo "VERSION=${VERSION#v}" >> $GITHUB_ENV
 
+      - name: Generate Release Notes
+        id: release_notes
+        run: |
+          # 获取上一个标签
+          PREV_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
+          
+          # 生成变更日志
+          if [ -n "$PREV_TAG" ]; then
+            echo "Changes since $PREV_TAG:"
+            git log --pretty=format:"* %s (%h)" $PREV_TAG..HEAD
+          else
+            echo "Initial release"
+            git log --pretty=format:"* %s (%h)"
+          fi > release_notes.txt
+
       - name: Build
         run: |
           mkdir -p build
@@ -53,7 +68,13 @@ jobs:
       - name: Create checksums
         run: |
           cd build
-          rhash --sha256 --sha512 --md5 * > checksums.txt
+          # 列出所有文件并生成校验和
+          for file in *; do
+            if [ -f "$file" ]; then
+              echo "Generating checksums for $file"
+              rhash --sha256 --sha512 --md5 "$file" >> checksums.txt
+            fi
+          done
 
       - name: Release
         uses: softprops/action-gh-release@v1
@@ -63,7 +84,7 @@ jobs:
             build/checksums.txt
           draft: ${{ startsWith(github.ref, 'refs/tags/draft-') }}
           fail_on_unmatched_files: true
-          generate_release_notes: true
+          body_path: release_notes.txt
           name: ${{ github.ref_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
