--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -76,12 +76,17 @@ jobs:
             fi
           done
 
+      - name: List build files
+        run: |
+          echo "Build directory contents:"
+          ls -la build/
+
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            build/*
-            build/checksums.txt
+            ./build/*
+            ./build/checksums.txt
           draft: ${{ startsWith(github.ref, 'refs/tags/draft-') }}
           fail_on_unmatched_files: true
           body_path: release_notes.txt
