--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -65,14 +65,14 @@ jobs:
           ./scripts/xcompile.sh
           echo "Build directory contents after compilation:"
           ls -la build/
-          # 验证构建结果
-          for binary in build/*; do
-            if [ -f "$binary" ]; then
-              echo "Verifying $binary..."
-              chmod +x "$binary"
-              "$binary" version
-            fi
-          done
+#          # 验证构建结果
+#          for binary in build/*; do
+#            if [ -f "$binary" ]; then
+#              echo "Verifying $binary..."
+#              chmod +x "$binary"
+#              "$binary" version
+#            fi
+#          done
 
       - name: Create checksums
         run: |
